kubernetes/apps/qbittorrent/qbittorrent/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      restartPolicy: Always
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 6881
              name: bittorrent
              protocol: TCP
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 600
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          persistentVolumeClaim:
            claimName: qbittorrent-media
