kubernetes/apps/qbittorrent/qbittorrent/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
