kubernetes/apps/qbittorrent/qbittorrent/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  hostnames:
    - qbittorrent.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: qbittorrent
          namespace: qbittorrent
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
